# BigInt

./: CMakeLists.txt  init.sh
clang-format/: .clang-format
include/: bigint.h
src/: CMakeLists.txt
src/BigInt/: CMakeLists.txt  bigint.cpp  bigint.h
src/test/: CMakeLists.txt  main.cpp
